<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_detail_more"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <TextView
            android:id="@+id/goods_more_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/comm_share"
            android:gravity="center"
            android:text="@string/share"
            android:textColor="#b5b5b5" />

        <TextView
            android:id="@+id/goods_more_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_search_white"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="#b5b5b5" />

        <TextView
            android:id="@+id/goods_more_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/top_bar_right_home_btn"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="#b5b5b5" />
    </LinearLayout>

</LinearLayout>