<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="380dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_arrow_left_flash"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_kill_tv"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/second_kill_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_kill_time"/>

        <TextView
            android:id="@+id/second_kill_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableRight="@drawable/home_arrow_right"
            android:text="@string/home_kill_more" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/kill_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="180dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>