<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/ib_good_info_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/top_bar_left_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="goods_detail"
            android:textColor="#564c4c"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/ib_good_info_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_more" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeee" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/good_info_image"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/good_info_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/app_name"
                    android:textColor="#323427" />

                <TextView
                    android:id="@+id/good_info_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/app_name"
                    android:textColor="#767f86" />

                <TextView
                    android:id="@+id/good_info_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/app_name"
                    android:textColor="#ed3f3f"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#eeee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/of"
                        android:textColor="#3c3d40" />

                    <TextView
                        android:id="@+id/good_info_way"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#ff4040" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_good"
                        android:textColor="#3c3d40" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="#eeee" />

                <TextView
                    android:id="@+id/good_info_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/home_arrow_right"
                    android:padding="10dp"
                    android:text="@string/select_type"
                    android:textColor="#3c3d40" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="#eeee" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tips"
                    android:textColor="#3c3d40" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="#eeee" />

            </LinearLayout>
        </ScrollView>

        <include layout="@layout/goods_detail_more" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_goods_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#fff">

        <TextView
            android:id="@+id/good_info_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_callserver_unpressed"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/service"
            android:textColor="#393b3e" />

        <TextView
            android:id="@+id/good_info_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/good_uncollected"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/store"
            android:textColor="#393b3e" />


        <TextView
            android:id="@+id/good_info_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_good_detail_cart"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/shop_icon"
            android:textColor="#393b3e" />

        <Button
            android:id="@+id/good_info_add_good"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:text="@string/add_goods"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>